--- a/新增采购单.html
+++ b/新增采购单.html
@@ -140,10 +140,12 @@
                 </div>
               </div>
 
-              <!-- Unnamed (文本框) -->
+              <!-- Unnamed (矩形) -->
               <div id="u1805" class="ax_default box_1">
                 <div id="u1805_div" class=""></div>
-                <input id="u1805_input" type="text" value="请选择采购组织" class="u1805_input"/>
+                <div id="u1805_text" class="text ">
+                  <p><span>请选择采购组织</span></p>
+                </div>
               </div>
 
               <!-- Unnamed (图片) -->
@@ -174,10 +176,12 @@
                 </div>
               </div>
 
-              <!-- Unnamed (文本框) -->
+              <!-- Unnamed (矩形) -->
               <div id="u1810" class="ax_default box_1">
                 <div id="u1810_div" class=""></div>
-                <input id="u1810_input" type="text" value="请选择" class="u1810_input"/>
+                <div id="u1810_text" class="text ">
+                  <p><span>请选择</span></p>
+                </div>
               </div>
 
               <!-- Unnamed (图片) -->
@@ -208,10 +212,12 @@
                 </div>
               </div>
 
-              <!-- Unnamed (文本框) -->
+              <!-- Unnamed (矩形) -->
               <div id="u1815" class="ax_default box_1">
                 <div id="u1815_div" class=""></div>
-                <input id="u1815_input" type="text" value="请选择" class="u1815_input"/>
+                <div id="u1815_text" class="text ">
+                  <p><span>请选择</span></p>
+                </div>
               </div>
 
               <!-- Unnamed (图片) -->
@@ -242,10 +248,12 @@
                 </div>
               </div>
 
-              <!-- Unnamed (文本框) -->
+              <!-- Unnamed (矩形) -->
               <div id="u1820" class="ax_default box_1">
                 <div id="u1820_div" class=""></div>
-                <input id="u1820_input" type="text" value="请选择" class="u1820_input"/>
+                <div id="u1820_text" class="text ">
+                  <p><span>请选择</span></p>
+                </div>
               </div>
 
               <!-- Unnamed (图片) -->
@@ -284,10 +292,12 @@
                 </div>
               </div>
 
-              <!-- Unnamed (文本框) -->
+              <!-- Unnamed (矩形) -->
               <div id="u1826" class="ax_default box_1">
                 <div id="u1826_div" class=""></div>
-                <input id="u1826_input" type="text" value="点击上传" class="u1826_input"/>
+                <div id="u1826_text" class="text ">
+                  <p><span>请上传</span></p>
+                </div>
               </div>
 
               <!-- Unnamed (图片) -->
@@ -318,10 +328,12 @@
                 </div>
               </div>
 
-              <!-- Unnamed (文本框) -->
+              <!-- Unnamed (矩形) -->
               <div id="u1831" class="ax_default box_1">
                 <div id="u1831_div" class=""></div>
-                <input id="u1831_input" type="text" value="请选择" class="u1831_input"/>
+                <div id="u1831_text" class="text ">
+                  <p><span>请选择</span></p>
+                </div>
               </div>
 
               <!-- Unnamed (图片) -->
